# quant-trading

./: .dockerignore  .env.runtime.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile.ops-api  Dockerfile.trader  README.ko.md  README.md  deploy.ps1  docker-compose.local.override.yml  docker-compose.localtest.override.yml  docker-compose.yml  pyproject.toml
.github/: commit-message.instructions.md
docs/: README.md  context_anchor.md  context_anchor_v3_transition.md  credential_key_rotation_runbook_2026-03-08.md  f2_v3_compatibility_fallback_cleanup_plan_2026-05-16.md  github_hosted_deployment.md  infra_handover_2026-02-28.md  ops_runbook.md  order_attempts_ops_checks_2026-03-04.md  order_attempts_rollout_2026-03-04.md  order_attempts_unique_constraints_runbook_2026-03-22.md  order_state_consistency_dev_2026-03-04.md  p0_implementation_report_2026-02-24.md  p1_implementation_report_2026-02-24.md  p2_design.md  p2_followup_report_2026-02-25.md  p2_implementation_report_2026-02-25.md  p3_implementation_report_2026-02-25.md  p4_dev_handover_2026-02-26.md  p4_product_report_2026-02-26.md  p5_dev_handover_2026-03-06.md  p5_product_report_2026-03-06.md  post_v3_ops_hardening_report_2026-03-22.md  postgres_v3_schema_sync_runbook_2026-03-08.md  project_update_2026-02-24.md  rollout_5m_checklist_2026-02-24.md  s1_admin_runtime_summary_api_2026-03-16.md  s2_admin_audit_logs_api_2026-03-16.md  s3_release_gate_report_automation_2026-03-16.md  s5_admin_role_separation_hardening_2026-03-26.md  s5_auth_session_lifecycle_hardening_2026-03-22.md  s7_risk_policy_expansion_2026-03-22.md  (+5 more)
(+185 files in other folders)
